objects/LA_Metadata_Translations__mdt.object
<CustomObject>
    <fields>
        <fullName>Chinese__c</fullName>
        <label>Chinese</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>English__c</fullName>
        <label>English</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>German__c</fullName>
        <label>German</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>German_ext__c</fullName>
        <inlineHelpText>this used if there is more text</inlineHelpText>
        <label>German_ext</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTML_Id__c</fullName>
        <label>HTML Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Japanese__c</fullName>
        <label>Japanese</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LA Metadata Translations</label>
    <listViews>
        <fullName>All_Columns</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>IsProtected</columns>
        <columns>Chinese__c</columns>
        <columns>English__c</columns>
        <columns>German__c</columns>
        <columns>German_ext__c</columns>
        <columns>HTML_Id__c</columns>
        <columns>Japanese__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Columns</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>LA Metadata Translations</pluralLabel>
</CustomObject>